syntax = "proto3";

package StandardsProto;

message ProtoGuid {
	bytes uuidBytes = 1;
}